<resources>
    <string name="app_name">驾考宝典</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
     <string name="login_username_hint">帐号长度为6-16位</string>
    <string name="login_register_link">新用户注册</string>
    <string name="login_register_mibao">找回密码</string>
    <string name="login_label_signin_zhaohao">帐号长度6-16位</string>
    <string name="login_label_signin_mima">密码长度6-16位</string>
    <string name="login_label_signin_anquanma">找回密码的唯一凭证</string>
    <string name="xiaoche">小车</string>
 	<string name="setTiKu">设置题库</string>
	<string name="learenCar">学车第一步，请选择题库</string>
	<string name="updateDate">已更新至：2016-02-19</string>
	<string name="subjectSum">科目一共12123道，科目四共123道</string>
	<string name="selectTiKu">请选择题库</string>
	<string name="carIsOk">完成</string>
	<string name="dingWei">定位城市</string>
	<string name="weiZhi">您的位置为：</string>
	<string name="diWeiShiBai">定位失败，请手动选择</string>
	<string name="diWeiZhong">定位中，请稍后</string>
	<string name="xuanZeJiaXiao">选择唐山市驾校</string>
 	<string name="keyikaogui_1">简介</string>
 	<string name="keyikaogui_2">科目一，又称科目一理论考试、驾驶员理论考试，是机动车驾驶证考核的一部分。
 	    根据《机动车驾驶证申领和使用规定》，考试内容包括驾车理论基础、道路安全法律法规、地方性法规等相关知识。
 	    考试形式为上机考试，100道题，90分及以上过关。</string>
 	<string name="keyikaogui_3">阶段目标</string>
 	<string name="keyikaogui_4">了解机动车基本知识，掌握道路交通安全法律、法规及道路交通信号的规定。</string>
 	<string name="keyikaogui_5">考试题库</string>
 	<string name="keyikaogui_6">考试题库为全国统一版本，不存在地方题的说法。小车共计1229题。</string>
 	<string name="keyikaogui_7">考试规则</string>
 	<string name="keyikaogui_8">考试主要考核道路交通安全法律法规、交通信号、通行规则等最基本的知识。由考生通过计算机闭卷答题，
 	    时间为45分钟，试题100道题，题目由计算机考试系统从考试题库中随机抽取生成，题型为判断题和单选题，满分100分，
 	    90分合格。不合格可以当场补考一次，如仍旧不合格，只能再次预约考试时间（科目一没有补考次数限制）。</string>
 	<string name="keyikaogui_9">科目一考试合格后，车管所应当在三日内核发《驾驶技能准考证明》，有效期为三年，学员要在有效期内完成科目二和科目三考试。</string>
 	<string name="keyikaogui_10">考试流程</string>
 	<string name="keyikaogui_11">参加交规考试，考生必须携带身份证或《居住证》等有效证件，以证明考生身份，
 	    然后按照考试规定进入考场。进入考场后，下面的操作步骤大家要注意了：</string>
 	<string name="keyikaogui_12">(1) 核对座位上的姓名、身份证、考试类型与自己是否相符，有不符的请向考试员提出。</string>
 	<string name="keyikaogui_13">(2) 敲“确定”键等待数秒，系统给出考题后，再开始答题。(答题时间为45分钟， 屏幕上有时间提示)</string>
 	<string name="keyikaogui_14">(3) 考题分为选择题和判断题两类。选择题为三个答案中，选一个正确答案，如考生认为答案一对，则敲1键;认为答案二对，
 	    则敲2键;认为答案三对，则敲3键，选完答案后再敲 “确认”键，进入下一题。判断题分为“正确”和“错”两项，考生认为该题正确则选1键，认为错了则选2键，
 	    选完答案后再敲“确认”键进入下一题。注：考生只能敲1、2、3、修改、确定这五个键。其他打√键为无用键，打×键考生不能敲，否则退出考试。 </string>
	<string name="subject_three_kaogui_jianjie">简介</string>
	<string name="subject_three_kaogui_jianjie_name01">科目三，又称大路考，是机动车驾驶证考核的一部分，是机动车驾驶人考试中道路驾驶技能和安全文明驾驶常识考试科目的简称。</string>
	<string name="subject_three_kaogui_jianjie_name02">不同的准驾车型道路驾驶技能考试内容不同，
	    一般包括：上车准备、起步、直线行驶、加减挡位操作、变更车道、靠边停车、
	    直行通过路口、路口左转弯、路口右转弯、通过人行横道线、通过学校区域、通过公共汽车站、会车、超车、调头、夜间行驶。</string>
	<string name="subject_three_kaogui_jianjie_name03">安全文明驾驶常识考试内容包括：安全文明驾驶操作要求、恶劣气象和复杂道路条件下的安全驾驶知识、
	    爆胎等紧急情况下的临危处置方法以及发生交通事故后的处置知识等。</string>
	<string name="subject_three_kaogui_daolujiashijiqiao">道路驾驶技能</string>
	<string name="subject_three_kaogui_daolujiashijiqiao_name01">科目三道路驾驶技能考试内容包括：大型客车、牵引车、城市公交车、
	    中型客车、大型货车、小型汽车、小型自动挡汽车、低速载货汽车和残疾人专用小型自动挡载客汽车考试上车准备、
	    起步、直线行驶、加减挡位操作、变更车道、靠边停车、直行通过路口、
	    路口左转弯、路口右转弯、通过人行横道线、通过学校区域、通过公共汽车站、
	    会车、超车、调头、夜间行驶；其他准驾车型的考试内容，由省级公安机关交通管理部门确定。</string>
	<string name="subject_three_kaogui_daolujiashijiqiao_name02">
	    大型客车、中型客车考试里程不少于20公里，其中白天考试里程不少于10公里，夜间考试里程不少于5公里。
	    牵引车、城市公交车、大型货车考试里程不少于10公里，其中白天考试里程不少于5公里，夜间考试里程不少于3公里。
	    小型汽车、小型自动挡汽车、低速载货汽车、残疾人专用小型自动挡载客汽车考试里程不少于3公里，并抽取不少于20%进行夜间考试；
	    不进行夜间考试的，应当进行模拟夜间灯光使用考试。   
	</string>
	<string name="subject_three_kaogui_daolujiashijiqiao_name03">
	    对大型客车、牵引车、城市公交车、中型客车、大型货车，省级公安机关交通管理部门应当根据实际增加山区、隧道、陡坡等复杂道路驾驶考试内容。
	    对其他汽车准驾车型，省级公安机关交通管理部门可以根据实际增加考试内容。
	</string>
	<string name="subject_three_kaogui_wenmingjiashi">安全文明驾驶常识</string>
	<string name="subject_three_kaogui_wenmingjiashi_name">科目三安全文明驾驶常识考试内容包括：安全文明驾驶操作要求、
	    恶劣气象和复杂道路条件下的安全驾驶知识、爆胎等紧急情况下的临危处置方法以及发生交通事故后的处置知识等。
	    </string>
	<string name="subject_three_kaogui_xueshijieshao">学时介绍</string>
	<string name="subject_three_kaogui_xueshijieshao_name">共计40学时。其中理论16个学时，模拟驾驶4个学时，实操20个学时。</string>
	<string name="subject_three_kaogui_kaoshiguize">考试规则</string>
	<string name="subject_three_kaogui_kaoshiguize_name01">科目二考试通过后，才可以报名参加科目三考试。
	    科目三有16项，包括上车准备、起步、直线行驶、加减挡位操作、变更车道、
	    通过路口、靠边停车、路口左转弯、路口右转弯、通过人行横道线、通过学校区域、
	    通过公共汽车站、会车、超车、调头、夜间行驶，对于大中型客货车，
	    还规定省级公安交管部门应当根据实际增加山区、隧道、陡坡等复杂道路驾驶考试内容。
	    </string>
	<string name="subject_three_kaogui_kaoshiguize_name02">小型汽车、小型自动挡汽车、低速载货汽车、
	    残疾人专用小型自动挡汽车考试里程不少于3公里，抽取不少于20%进行夜间考试，
	    不进行夜间考试的，进行模拟夜间灯光使用考试。满分100分，90分以上为合格。
	    </string>
	<string name="subject_three_kaogui_kaoshiguize_name03">关于补考：驾驶准考证明在有效期内，科目三考试的预约次数不得超过5次，重新申请考试的预约时间为10日。考试不合格的，
	    可以补考一次，即有5次“正考”和5次“补考”机会。
	    第5次预约考试仍不合格的，已考试合格的其他科目成绩作废。
	    </string>
	<string name="subject_three_kaogui_kaoshiliucheng">考试流程</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name01">1.上车准备</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name01_name">考生须按安全员指示，靠近车身，（自左前车门向后）绕车一周，确认安全后打开车门上车。上车后听到语音提示“请学员做好考试准备，并进行指纹验证”，首先调整座椅至合适自己的位置，调整内、外后视镜，系好安全带。然后进行指纹验证。指纹仪位于方向盘左侧空调出风口下方。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name02">2.夜间行驶</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name02_name01">指纹验证成功后，白天考试学员在起步前，考生听到语音提示“下面开始模拟夜间灯光使用，请按照语音提示进行操作”后，考生应开始灯光操作。夜间行驶灯光模拟考试将从以下项目中随机抽取三项进行考试。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name02_name02">主要包括：</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name02_name03">你将要在路口处转弯，请使用正确灯光（交替使用远近光灯不少于2次）； 
			你正在低能见度道路上行驶，请使用正确灯光（开启远光灯）； 
			你将要通过急弯，请使用正确灯光（交替使用远近光灯不少于2次）； 
			你将要通过坡路，请使用正确灯光（交替使用远近光灯不少于2次）； 
			你将要通过拱桥，请使用正确灯光（交替使用远近光灯不少于2次）；
			你将要通过人行横道，请使用正确灯光 （ 交替使用远近光灯不少于2次）； 
			你将要通过没有交通信号灯控制的路口，请使用正确灯光（交替使用远近光灯不少于2次）； 
			你将要超车，请使用正确灯光（先开启左转向灯，然后交替使用远近光灯不少于2次，再开启右转向灯）； 
			你将要与其它车辆会车，请使用正确灯光（开启近光灯）； 
			灯光模拟完毕后，考生需将灯光关闭，再进行下一项考试 抽取到夜间考试的学员应按照夜间考试实际路况进行驾驶。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name03">3.起步</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name03_name">当听到语音提示“请起步”后，踩离合器，将档位挂入一档，打左转向灯（大于3秒），同时（左扭头）观察左后视镜，确认安全后，鸣笛，放驻车制动器，平稳起步，拨正转向灯。在坡路起步时禁止后溜。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name04">4.路口右转弯</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name04_name">当听到语音提示“前方路口右转弯”后，开右转向灯（大于3秒）后，按导向箭头车道右转至行车道。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name05">5.调头</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name05_name">当听到语音提示“前方请调头”后，考生应打左转向灯（大于3秒），通过（左）后视镜观察左后方交通情况，确认安全后，方可降低车速，换入低档，驶入调头区域。驶入调头区域时应左右观察路况，确认安全后驶入新车道正常行驶并关闭左转向灯。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name06">6.直行通过路口</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name06_name">当听到语音提示“前方通过路口”后，考生应减速慢行（刹车），观察道路交通情况，按照信号灯指示行驶，通过路口时，车速应低于30km/h。路口内禁止停车。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name07">7.路口左转弯</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name07_name">当听到语音提示“前方路口左转弯”后，开左转向灯（大于3秒）后，按导向箭头车道左转至行车道。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name08">8.通过公交车站</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name08_name">当听到语音提示“通过公交车站”，考生应减速慢行（刹车）或在进入该区域前车速低于30km/h，左右（扭头）观察，注意避让公交车辆及行人，确认安全后方可通过。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name09">9.加速挡操作</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name09_name">当听到语音提示“请完成加减档动作”后，考生应该将档位调整至2档，从2档依次升至5档，在5档位时时速需超过40km/h，再将档位依次降至2档。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name10">10.会车</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name10_name">当听到语音提示“前方会车”后，考生须注意前方来车，靠行车道右侧行驶至会车项目结束。注意避让其他车辆，不能压非机动车道线。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name11">11.超车</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name11_name">当听到语音提示“请完成超车动作”后，考生应打左转向灯（大于3秒），同时通过（左）后视镜观察左后方交通情况，确认安全后方可向左转动方向盘，驶入左侧车道进行超车。超过被超车辆，确认与被超车辆保持安全距离后，打右转向灯（大于3秒），同时通过（右）后视镜观察右后方，确认安全后驶入原车道正常行驶。当不具备超车条件时，可等待条件允许时，完成超车动作，禁止右侧超车。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name12">12.直线行驶</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name12_name">当听到语音提示“请保持直线行驶”后，考生应目视前方，双手控制好方向盘，保持车辆直线行驶。严禁骑压道路分界线。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name13">13.变更车道</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name13_name">当听到语音提示“请变更车道”后，考生应打（左）转向灯（大于3秒），同时（左扭头）通过（左）后视镜观察后方交通情况，确认安全后，向（左）转动方向盘变更车道。当不具备变更条件时，考生应减速慢行，等待条件允许后进行变更车道。严禁连续变更两条车道。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name14">14.通过人行横道</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name14_name">当听到语音提示“前方通过人行横道”后，考生应减速慢行（刹车）或在进入该区域前车速低于30km/h。若有行人通过，请把车辆停在安全线外等候，在行人通过人行横道后方可通过。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name15">15.通过学校区域</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name15_name">当听到语音提示“前方通过学校”后，考生应减速慢行（刹车），或在进入该区域前车速低于30km/h，左右（扭头）观察，注意避让学生，确认安全后方可通过。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name16">16.靠边停车</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name16_name01">当听到语音提示“请靠边停车”后，考生打右转向灯（大于3秒），同时通过（右）后视镜观察右后方交通情况，确认安全后，将车辆（右侧）平行停放在小于路沿石（或者道路边缘实线）30厘米以内处，但不能压到路沿石（或者道路边缘实线），停稳车辆，拉起驻车制动器，摘空档。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name16_name02">听到语音提示“考试合格，请下车”或“考试未通过，请下车”后，观察左后方交通情况，确认安全后，打开车门下车，考试完毕。</string>
	<string name="subject_three_kaogui_kaoshiliucheng_name16_name03">如果第一次考试不合格，语音提示“考试不合格，重新开始考试”，请不要下车，按照语音提示继续考试即可。</string>
	<string name="subject_two_miji_podao_01">场地要求：</string>
	<string name="subject_two_miji_podao_01_name">陡坡的坡度必须大于等于10度，考C1驾照的陡坡长度要大于等于20米。在考试过程中，学员在陡坡停车后，必须在30秒内起步，否则就算失败。</string>
	<string name="subject_two_miji_podao_02">1.坡道定点停车与起步图示： 需要图片</string>
	<string name="subject_two_miji_podao_03">2.操作技巧：</string>
	<string name="subject_two_miji_podao_03_name01">一、坡道定点停车：</string>
	<string name="subject_two_miji_podao_03_name02">当听到口令时，先轻带刹车，打右转向灯，看右后视镜，往右打方向，等到车头的中间压到边线时，往左打方向，等车头中点离边线距离10厘米时，回正并保持边线距离，等目标到时，车刹停，拉紧手制动。</string>
	<string name="subject_two_miji_podao_03_name03">1、迅速打右转禹灯，通过右侧倒车镜观察车辆后方有无跟车，确定是否可以转入右边车道；</string>
	<string name="subject_two_miji_podao_03_name04">2、踩刹车向右慢打方向盘，将右前轮与地面白色实线平齐，调正车身，回正方向；</string>
	<string name="subject_two_miji_podao_03_name05">3、当车速降低20KM/H左右时，踩下离合器踏板，然后稍稍松点脚刹，让车辆能够利用惯性向前滑行，待标杆从右侧倒车镜旁边滑过，与驾驶室对正时，轻踏刹车踏板，将车缓缓停稳；</string>
	<string name="subject_two_miji_podao_03_name06">4、拉手刹；</string>
	<string name="subject_two_miji_podao_03_name07">5、把变速杆拔到空挡位置；</string>
	<string name="subject_two_miji_podao_03_name08">6、左脚松开离合器；</string>
	<string name="subject_two_miji_podao_03_name09">7、右脚松脚刹；</string>
	<string name="subject_two_miji_podao_03_name10">8、关掉右转向灯。</string>
	<string name="subject_two_miji_podao_03_name11">二、坡道定点起步：</string>
	<string name="subject_two_miji_podao_03_name12">换一挡，开左转向灯，按喇叭，拉紧手制动，松刹车，慢抬离合器，等抬到车头微往上抬时，轻加油门，松手制动，起步。</string>
	<string name="subject_two_miji_podao_04">3.评分标准：</string>
	<string name="subject_two_miji_podao_04_name01">1、没有定点停车，扣100分；</string>
	<string name="subject_two_miji_podao_04_name02">2、车辆停止后，汽车前保险杠未到控制线，扣100分；</string>
	<string name="subject_two_miji_podao_04_name03">3、停车后后溜大于30厘米，扣100分；</string>
	<string name="subject_two_miji_podao_04_name04">4、停车后后溜小于30厘米，扣10分；</string>
	<string name="subject_two_miji_podao_04_name05">5、起步未开左转向灯，扣10分；</string>
	<string name="subject_two_miji_podao_04_name06">6、车辆行驶中压道路边缘实线，扣100分；</string>
	<string name="subject_two_miji_podao_04_name07">7、车辆停止后，前保险杠未到停车线，扣10分；</string>
	<string name="subject_two_miji_podao_04_name08">8、停车时右前轮距边缘线30厘米以上，扣10分；</string>
	<string name="subject_two_miji_podao_04_name09">9、起步时间超30秒，扣100分。</string>
</resources>