<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  
    
   	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/bj"
        >

        <Button 
            android:id="@+id/button_subject_two_kaogui_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/fanhui"
            android:layout_weight="8"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="科三考规"
            android:textColor="@color/white"
            android:gravity="center_vertical|left"
            android:textSize="20dp" />

    </LinearLayout>
    
    
    <ScrollView 
   
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_three_kaogui_jianjie"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_jianjie_name01"
        android:layout_marginTop="20dp"
        />
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_jianjie_name02"
        android:layout_marginTop="20dp"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_jianjie_name03"
        android:layout_marginTop="20dp"
        />
      
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_three_kaogui_daolujiashijiqiao"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_daolujiashijiqiao_name01"
        android:layout_marginTop="20dp"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_daolujiashijiqiao_name02"
        android:layout_marginTop="20dp"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_daolujiashijiqiao_name03"
        android:layout_marginTop="20dp"
        />
    
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_three_kaogui_wenmingjiashi"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_wenmingjiashi_name"
        android:layout_marginTop="20dp"
        />
      
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_three_kaogui_xueshijieshao"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_xueshijieshao_name"
        android:layout_marginTop="20dp"
        />
      
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_three_kaogui_kaoshiguize"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiguize_name01"
        android:layout_marginTop="20dp"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiguize_name02"
        android:layout_marginTop="20dp"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiguize_name03"
        android:layout_marginTop="20dp"
        />
      
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_three_kaogui_kaoshiliucheng"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name01"
        android:layout_marginTop="20dp"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name01_name"
        android:layout_marginTop="20dp"
        />
      <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name02"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name02_name01"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name02_name02"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name02_name03"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name03"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name03_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name04"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name04_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name05"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name05_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name06"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name06_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name07"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name07_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name08"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name08_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name09"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name09_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name10"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name10_name"
        android:layout_marginTop="20dp"
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name11"
        android:layout_marginTop="20dp"
        />
        <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name11_name"
        android:layout_marginTop="20dp"
        />
        <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name12"
        android:layout_marginTop="20dp"
        />
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name12_name"
        android:layout_marginTop="20dp"
        />
         
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name13"
        android:layout_marginTop="20dp"
        />
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name13_name"
        android:layout_marginTop="20dp"
        />
         
        <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name14"
        android:layout_marginTop="20dp"
        />
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name14_name"
        android:layout_marginTop="20dp"
        />
       
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name15"
        android:layout_marginTop="20dp"
        />
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name15_name"
        android:layout_marginTop="20dp"
        />
         
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name16"
        android:layout_marginTop="20dp"
        />
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name16_name01"
        android:layout_marginTop="20dp"
        />
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name16_name02"
        android:layout_marginTop="20dp"
        />
         <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_three_kaogui_kaoshiliucheng_name16_name03"
        android:layout_marginTop="20dp"
        />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen01"
           />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen02"
           />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen03"
           />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen04"
           />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen05"
           />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen06"
           />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen07"
           />
       <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
         android:background="@drawable/kemusanpingfen08"
           />
       </LinearLayout>
       </ScrollView>
      
</LinearLayout>
