<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/bjj"
        >

        <Button 
            android:id="@+id/button_subject_two_kaogui_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/fanhui"
            android:layout_weight="8"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="坡道定点停车和起步"
            android:textColor="@color/white"
            android:gravity="center_vertical|left"
            android:textSize="20dp" />

    </LinearLayout>

   <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_two_miji_podao_01"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_01_name"
        />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_two_miji_podao_02"
        />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_two_miji_podao_03"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name01"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name02"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name03"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name04"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name05"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name06"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name07"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name08"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name09"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name10"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name11"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_03_name12"
        />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/subject_two_miji_podao_04"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name01"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name02"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name03"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name04"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name05"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name06"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name07"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name08"
        />
    <TextView 
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_two_miji_podao_04_name09"
        />
    
</LinearLayout>
</ScrollView>
</LinearLayout>
